--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8">
 
-    <title>Parallax.js | Separate Axis Example</title>
+    <title>Optima | Bring to your life</title>
 
     <!-- Behavioral Meta Data -->
     <meta name="apple-mobile-web-app-capable" content="yes">
