add fonts style

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8">
 
-    <title>Optima | Bring to your hands</title>
+    <title>Optima</title>
 
     <!-- Behavioral Meta Data -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -13,6 +13,9 @@
     <!-- Styles -->
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
 
+    <!-- Font -->
+    <link href="https://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet">
+    
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>
         $(function() {
